--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,19 +33,24 @@ dist.jar=${dist.dir}/DCAA_POS_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.build-java=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java
+file.reference.java-x64=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\x64
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
+file.reference.opencv-3416.jar=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\opencv-3416.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.opencv-3416.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.build-java}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -127,6 +132,7 @@ platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
+    ${file.reference.java-x64}:\
     ${build.classes.dir}
 run.modulepath=\
     ${javac.modulepath}
