--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.build-java=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-digester-1.7.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-logging-1.1.jar
+file.reference.commons.collections-3.2.1.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons.collections-3.2.1.jar
+file.reference.groovy-all-1.7.5.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\groovy-all-1.7.5.jar
+file.reference.itext-2.1.7.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\itext-2.1.7.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\jasperreports-5.6.0.jar
 file.reference.java-x64=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\x64
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 file.reference.opencv-3416.jar=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\opencv-3416.jar
+file.reference.rs2xml.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\rs2xml.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,7 +53,16 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
     ${javafx.classpath.extension}:\
-    ${file.reference.opencv-3416.jar}
+    ${file.reference.opencv-3416.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons.collections-3.2.1.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
