--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,6 @@ dist.jar=${dist.dir}/DCAA_POS_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.build-java=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java
 file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-beanutils-1.8.2.jar
 file.reference.commons-digester-1.7.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-digester-1.7.jar
 file.reference.commons-digester-2.1.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\commons-digester-2.1.jar
@@ -44,7 +43,7 @@ file.reference.itext-2.1.7.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DC
 file.reference.jasperreports-5.6.0.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\jasperreports-5.6.0.jar
 file.reference.java-x64=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\x64
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
-file.reference.opencv-3416.jar=C:\\Users\\Jamie\\Downloads\\opencv\\build\\java\\opencv-3416.jar
+file.reference.opencv-3416.jar=DCAA POS V 0.4.2/lib/opencv-3416.jar
 file.reference.rs2xml.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\DCAA_BILLING\\DCAA Billing Build 50.0.11- Beta\\lib\\rs2xml.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -67,8 +66,7 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
-javac.modulepath=\
-    ${file.reference.build-java}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
